a1/brendan_gordon/TEST_PROGRAMS/invalidtype/frederic_lafrance/5.min
# Can't add integers and strings

var x: string;
var y: int;

x = x + y;

